@@ -1,4 +1,5 @@
-	* optimized swarm startup time (shaved off about 1-2 seconds)
+	* optimized metadata transfer (magnet link) startup time (shaved off about 1 second)
+	* optimized swarm startup time (shaved off about 1 second)
 	* support DHT name lookup
 	* optimized memory usage of torrent_info and file_storage, forcing some API changes
 	  around file_storage and file_entry
